[package]
name = "count_gitlab"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "*"
anyhow = "*"
toml = "*"
serde = "*"
serde_derive = "*"
num_cpus = "*"
smol = "*"
http-types = "*"
async-h1 = "*"
chrono = "*"
once_cell = "*"
rbatis = "*"
rbatis-core = { version = "*", features = ["sqlite"] }
rbatis-macro-driver = "*"
#strum = "*"
#strum_macros = "*"
util = { git = "https://gitee.com/zzoe/util" }

[dev-dependencies]
fast_log = "*"
async-std = { version = "*", features = ["attributes"] }