[package]
name = "count_gitlab"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
anyhow = "*"
toml = "*"
serde = "*"
serde_derive = "*"
num_cpus = "*"
smol = "*"
http-types = "*"
async-h1 = "*"
#chrono = "*"
once_cell = "*"
rusqlite = { version = "*", features = ["bundled"] }
simple_excel_writer = "*"
#strum = "*"
#strum_macros = "*"
chrono = "*"
util = { git = "https://gitee.com/zzoe/util" }

[dev-dependencies]

[workspace]
members = ["mock_server"]