[package]
name = "count_gitlab"
version = "0.2.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
log4rs = "1"
anyhow = "1"
toml = "0"
serde = "1"
serde_derive = "1"
num_cpus = "1"
async-executor = "1"
async-net = "1"
#async-io = "1"
futures-lite = "1"
http-types = "2"
async-h1 = "2"
once_cell = "1"
rusqlite = { version = "0", features = ["bundled"] }
simple_excel_writer = "0"
#strum = "*"
#strum_macros = "*"
chrono = "0"
util = { git = "https://gitee.com/zzoe/util", features=["select"] }

[dev-dependencies]

[workspace]
members = ["mock_server"]