[package]
name = "mock_server"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tide = { version = "*", default-features = false, features = ["h1-server", "logger"] }
serde = "*"
serde_derive = "*"
futures-lite = "*"
